--- a/css/sim.css
+++ b/css/sim.css
@@ -1,4 +1,12 @@
+@import "menu.css";
+@import "screen-intro.css";
+
+:root {
+    --blue: #1c1a9a;
+}
+
 body {
+    background-color: var(--blue);
     margin: 0;
     overflow-x: hidden;
     font-size: 0;
@@ -12,6 +20,10 @@ body {
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none; /* Non-prefixed version, currently
                           supported by Chrome and Opera */
+}
+
+a {
+    text-decoration: none;
 }
 
 .clear {
@@ -34,7 +46,7 @@ body {
 }
 
 .btn {
-    background-color: rgba(6, 6, 232, 0.76);
+    background-color: #0400ff;
     color: white;
     border: none;
     font-family: 'Press Start 2P';
@@ -43,6 +55,7 @@ body {
     margin: 8px 8px;
     float: right;
     box-shadow: 3px 3px 0px rgba(0, 0, 0, 1);
+    cursor: pointer;
 }
 
 .btn.danger {
@@ -67,7 +80,7 @@ body {
 #sidebar {
     background-color: #1c1a9a;
     position: absolute;
-    width: 285px;
+    width: 330px;
     height: 100vh;
     right: 0;
     top: 0;
@@ -126,18 +139,73 @@ body {
     overflow-y: auto;
 }
 
-
 #loading-overlay {
     display: none;
-    position: fixed;
-    width: 100%;
-    height: 100%;
     z-index: 100;
-    background-color: rgba(0, 0, 0, 0.2);
-    background-image: url('../img/pixel.gif');
     color: white;
-    text-align: center;
-    vertical-align: middle;
     cursor: wait;
     font-size: 16px;
+}
+
+/* some base components */
+.box {
+    width: auto;
+    padding: 15px;
+    border: 2px solid #000000;
+    -webkit-box-shadow: 0 0 0 5px, 8px 8px 0 4px black;
+    -moz-box-shadow: 0 0 0 5px, 8px 8px 0 4px black;
+    box-shadow: 0 0 0 5px, 8px 8px 0 4px black;
+    font-size: 0px;
+    background-color: #0000c1;
+    color: #bbbbbb;
+}
+
+.box .box-content {
+    color: white;
+    text-align: center;
+}
+.box .box-content h1 {
+    font-size: 24px;
+    margin-bottom: 30px;
+}
+.box .box-content p {
+    font-size: 14px;
+}
+.box .box-content a {
+    font-size: 14px;
+    line-height: 24px;
+}
+
+.box .box-content .box-btn {
+    box-shadow: 4px 4px 0px rgba(0, 0, 0, 1);
+    padding: 20px;
+}
+
+.box .box-content .box-btn .img-holder {
+    display: block;
+    font-size: 0;
+    margin-bottom: 22px;
+    box-shadow: 4px 4px 0px rgba(0, 0, 0, 1);
+}
+
+.pixel-overlay {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.2);
+    background-image: url('../img/pixel.gif');
+    text-align: center;
+    vertical-align: middle;
+    z-index: 1;
+    image-rendering: pixelated;
+    background-size: 2px;
+}
+
+.fullscreen-content {
+    z-index: 2;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
 }
