--- a/css/sim.css
+++ b/css/sim.css
@@ -33,6 +33,7 @@ a {
 #canvas-holder {
     width: 100%;
     height: 100vh;
+    padding-top: 37px;
 }
 
 #canvas-holder canvas {
@@ -43,27 +44,6 @@ a {
     position: absolute;
     bottom: 10px;
     width: 290px;
-}
-
-.btn {
-    background-color: #0400ff;
-    color: white;
-    border: none;
-    font-family: 'Press Start 2P';
-    padding: 10px 10px;
-    font-size: 12px;
-    margin: 8px 8px;
-    float: right;
-    box-shadow: 3px 3px 0px rgba(0, 0, 0, 1);
-    cursor: pointer;
-}
-
-.btn.danger {
-    background-color: #F44336;
-}
-
-.btn.green {
-    background-color: #53da27;
 }
 
 #coords {
@@ -84,11 +64,11 @@ a {
     height: 100vh;
     right: 0;
     top: 0;
-    z-index: 50;
+    z-index: 5;
     border-left: solid 5px #000000;
     font-size: 12px;
     color: white;
-    padding: 0 20px;
+    padding: 57px 20px 0;
     text-shadow: 3px 3px 0px rgba(0, 0, 0, 1);
     line-height: 24px;
     min-height: 662px;
@@ -208,4 +188,27 @@ a {
     height: 100vh;
     top: 0;
     left: 0;
+}
+
+
+
+.btn {
+    background-color: #0400ff;
+    color: white;
+    border: none;
+    font-family: 'Press Start 2P';
+    padding: 10px 10px;
+    font-size: 12px;
+    margin: 8px 8px;
+    float: right;
+    box-shadow: 3px 3px 0px rgba(0, 0, 0, 1);
+    cursor: pointer;
+}
+
+.btn.danger {
+    background-color: #F44336;
+}
+
+.btn.green {
+    background-color: #53da27;
 }
