--- a/css/lib/bootstrap.css
+++ b/css/lib/bootstrap.css
@@ -36,13 +36,17 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }*/
 
-div {
+div, input, textarea {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 div:before,
-div:after {
+div:after,
+input:before,
+input:after,
+textarea:before, 
+textarea:after {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
