--- a/css/sim.css
+++ b/css/sim.css
@@ -1,5 +1,6 @@
 @import "menu.css";
 @import "screen-intro.css";
+@import "screen-import.css";
 
 :root {
     --blue: #1c1a9a;
@@ -121,7 +122,7 @@ a {
 
 #loading-overlay {
     display: none;
-    z-index: 100;
+    z-index: 200;
     color: white;
     cursor: wait;
     font-size: 16px;
@@ -130,7 +131,7 @@ a {
 /* some base components */
 .box {
     width: auto;
-    padding: 15px;
+    padding: 30px;
     border: 2px solid #000000;
     -webkit-box-shadow: 0 0 0 5px, 8px 8px 0 4px black;
     -moz-box-shadow: 0 0 0 5px, 8px 8px 0 4px black;
@@ -147,13 +148,34 @@ a {
 .box .box-content h1 {
     font-size: 24px;
     margin-bottom: 30px;
+    margin-top: 0px;
+    
+    text-shadow: 3px 3px 0px rgba(0, 0, 0, 1);
 }
+.box .box-content h2 {
+    font-size: 20px;
+    margin-bottom: 30px;
+    
+    text-shadow: 3px 3px 0px rgba(0, 0, 0, 1);
+}
+
 .box .box-content p {
     font-size: 14px;
+    
+    text-shadow: 3px 3px 0px rgba(0, 0, 0, 1);
 }
 .box .box-content a {
     font-size: 14px;
     line-height: 24px;
+    
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 1);
+}
+.box .box-content a span {
+    text-shadow: 2px 1px 0px rgba(0, 0, 0, 1);
+}
+
+.box .box-content a.btn {
+    text-shadow: none;
 }
 
 .box .box-content .box-btn {
@@ -211,4 +233,18 @@ a {
 
 .btn.green {
     background-color: #53da27;
+}
+
+
+textarea.box {
+    outline: 0;
+    color: white !important;
+    line-height: 24px;
+    font-family: 'Press Start 2P';
+    font-size: 14px;
+    text-shadow: 3px 3px 0 black;
+    width: 100%;
+    height: 30vh;
+    background-image: url('../img/pixel.gif');
+    padding: 15px;
 }
