--- a/css/screen-intro.css
+++ b/css/screen-intro.css
@@ -1,4 +1,7 @@
 #screen-intro .box {
-    height: 50vh;
+    min-height: 50vh;
     margin-top: 20vh;
+}
+#screen-intro .box .btn {
+    margin: 0;
 }
