--- a/css/sim.css
+++ b/css/sim.css
@@ -137,6 +137,42 @@ a {
     font-size: 16px;
 }
 
+#game-history {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    z-index: 100;
+    display: none;
+    top: 0;
+    left: 0;
+}
+
+#game-history .box {
+    margin-top: 20vh;
+}
+#game-history .box h2 {
+    margin-top: 0;
+    text-align: left;
+}
+
+#game-history #population-chart-holder {
+    -webkit-box-shadow: 0 0 0 5px, 8px 8px 0 4px black;
+    -moz-box-shadow: 0 0 0 5px, 8px 8px 0 4px black;
+    box-shadow: 0 0 0 5px, 8px 8px 0 4px black;
+    color: #bbbbbb;
+    border: solid 2px black;
+}
+#game-history #population-chart {
+}
+
+#game-history .box text {
+    /*font-family: 'Press Start 2P';*/
+    /*font-style: normal;*/
+    /*color: white;
+    //text-shadow: 3px 3px 0px rgba(0, 0, 0, 1);
+    //fill: white;*/
+}
+
 /* some base components */
 .box {
     width: auto;
