--- a/css/sim.css
+++ b/css/sim.css
@@ -62,6 +62,19 @@ a {
     text-shadow: 1px 1px 0 black;
 }
 
+#speed {
+    position: absolute;
+    color: white;
+    bottom: 5px;
+    right: 285px;
+    z-index: 4;
+    font-size: 16px;
+    width: 180px;
+    line-height: 20px;
+    text-shadow: 1px 1px 0 black;
+    text-align: right;
+}
+
 #sidebar {
     background-color: #1c1a9a;
     position: absolute;
