--- a/css/sim.css
+++ b/css/sim.css
@@ -91,11 +91,8 @@ a {
     line-height: 24px;
     min-height: 662px;
 }
-
-@media screen and (max-width: 768px) {
-    #sidebar {
-        display: none;
-    }
+.sidetab-nav {
+    display: none;
 }
 
 #sidebar .sec-title {
@@ -337,6 +334,21 @@ textarea.box {
 /* mobile media queries */
 
 @media screen and (max-width: 767px) {
+    
+    #sidebar {
+        padding-top: 0px;
+        height: 210px;
+        min-height: auto;
+        bottom: 0;
+        top: auto;
+        width: 100%;
+        border-top: solid 5px black;
+        border-left: none;
+    }
+    #sidebar h1 {
+        display: none;
+    }
+    
     #screen-intro .box {
         padding: 16px;
         margin-top: 10vh;
@@ -367,5 +379,81 @@ textarea.box {
         font-size: 10px;
         width: 170px;
         line-height: 16px;
+        bottom: 210px;
+    }
+    #speed {
+        right: 5px;
+        font-size: 10px;
+        bottom: 210px;
+    }
+    
+    #sidebar #minimap {
+        position: relative;
+        top: auto;
+        bottom: auto;
+        left: auto;
+        right: auto;
+    }
+    
+    #sidebar .sec-title {
+        font-size: 12px;
+        margin-bottom: 2px;
+    }
+    
+    #specieList {
+        height: 120px;
+    }
+    
+    #sidebar #species .specie {
+        font-size: 10px;
+        margin-bottom: 8px;
+    }
+    
+    .sidetab-nav {
+        display: block;
+        margin-bottom: 4px;
+        font-size: 0;
+    }
+    .sidetab-nav a {
+        display: inline-block;
+        padding: 0px 10px;
+        float: none;
+        background: blue;
+        font-size: 8px;
+        text-shadow: 1px 1px 0px black;
+    }
+
+    .sidetab-nav a.active {
+        background: #004fff;
+    }
+
+    .sidetab {
+        display: none;
+    }
+
+    .sidetab.active {
+        display: block;
+    }
+    
+    #game-history .box {
+        margin-top: 60px;
+        padding: 20px;
+    }
+    
+    #game-history .box h2 {
+        font-size: 15px;
+        line-height: 20px;
+        margin-bottom: 10px;
+    }
+    
+    #game-history .close {
+        right: 30px;
+        font-size: 16px;
+    }
+    
+    #game-history #no-data-msg {
+        font-size: 10px;
+        line-height: 16px;
+        padding: 0 10px;
     }
 }
