--- a/css/sim.css
+++ b/css/sim.css
@@ -209,6 +209,37 @@ a {
     //fill: white;*/
 }
 
+/* help overlay */
+#help-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    z-index: 100;
+    display: none;
+    top: 0;
+    left: 0;
+}
+
+#help-overlay .box {
+    margin-top: 20vh;
+}
+
+#help-overlay .box h2 {
+    margin-top: 0;
+    text-align: left;
+}
+
+#help-overlay .close {
+    font-size: 20px;
+    text-shadow: 3px 3px 0 black;
+    color: white;
+    display: block;
+    position: absolute;
+    right: 50px;
+    z-index: 100;
+    cursor: pointer;
+}
+
 /* some base components */
 .box {
     width: auto;
@@ -217,7 +248,14 @@ a {
     -webkit-box-shadow: 0 0 0 5px, 8px 8px 0 4px black;
     -moz-box-shadow: 0 0 0 5px, 8px 8px 0 4px black;
     box-shadow: 0 0 0 5px, 8px 8px 0 4px black;
-    font-size: 0px;
+    
+    /* hey there its brian in the future speaking */
+    /* I'm commenting this font-size: 0 shit and you better hope I`m wrong for doing that */
+    /* otherwise I'm goddamn traveling to the past to beat your ass up dude */
+    /* understood? */
+    /* font-size: 0px; */
+    font-size: 16px;
+    /* peace 2021-10-27 */
     background-color: #0000c1;
     color: #bbbbbb;
 }
@@ -234,6 +272,13 @@ a {
     text-shadow: 3px 3px 0px rgba(0, 0, 0, 1);
 }
 .box .box-content h2 {
+    font-size: 20px;
+    margin-bottom: 30px;
+
+    text-shadow: 3px 3px 0px rgba(0, 0, 0, 1);
+}
+
+.box .box-content h4 {
     font-size: 20px;
     margin-bottom: 30px;
 
@@ -316,6 +361,21 @@ a {
     background-color: #53da27;
 }
 
+.btn.keyboard {
+    background-color: #bbbbbb;
+}
+
+#help-overlay h4 {
+    font-size: 14px;
+    line-height: 130%;
+}
+
+#help-overlay .btn.keyboard {
+    display: inline-block;
+    float: none;
+    margin-bottom: 10px;
+    margin-top: 0;
+}
 
 textarea.box {
     outline: 0;
@@ -330,6 +390,30 @@ textarea.box {
     padding: 15px;
 }
 
+/* about overlay */
+#about-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    z-index: 100;
+    display: none;
+    top: 0;
+    left: 0;
+}
+#about-overlay .box {
+    margin-top: 20vh;
+}
+
+#about-overlay .close {
+    font-size: 20px;
+    text-shadow: 3px 3px 0 black;
+    color: white;
+    display: block;
+    position: absolute;
+    right: 50px;
+    z-index: 100;
+    cursor: pointer;
+}
 
 /* mobile media queries */
 
@@ -456,4 +540,38 @@ textarea.box {
         line-height: 16px;
         padding: 0 10px;
     }
+    
+    /* help overlay */
+    #help-overlay .box {
+        margin-top: 16px;
+        padding: 8px;
+    }
+    
+    #help-overlay .close {
+        right: 16px;
+    }
+    
+    #help-overlay h2 {
+        margin-bottom: 20px;
+    }
+    
+    #help-overlay h4 {
+        margin-top: 0px;
+        margin-bottom: 16px;
+        font-size: 10px;
+    }
+}
+
+
+/* ffs */
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.text-center {
+    text-align: center;
 }
